# desktop-shadow

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: windows-desktop.yml
demo/: README_demo.md  demo_dem.asc  demo_project.wssproj.json  demo_turbines.csv
engine/: requirements.txt  run_engine.py
engine/scripts/: build_windows_engine.ps1
engine/tests/: test_demo_smoke.py
engine/windshadow_engine/: main.py
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/i18n/: messages.ts
