[package]
name = "wind-shadow-studio"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
rfd = "0.14"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
